Just another update

--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 Python:
   Wprowadzenie:
     - Informacje o języku
-    - Przygotowanie środowiska
+    - Instalacja środowiska
     - PyCharm - utworzenie projektu
     - PyCharm - elementy IDE
     - Jupyter Notebook
