Just another update

--- a/config.yml
+++ b/config.yml
@@ -82,7 +82,7 @@ Python:
     - Generatory
     - Doctesty
     - Logowanie
-Data Science|todo:
+Data Science:
   Wprowadzenie:
     - Informacje ogólne
     - Jupyter Notebook
