--- a/config.yml
+++ b/config.yml
@@ -15,7 +15,7 @@ Python:
       - Operacje arytmetyczne
       - Operacje na stringach
       - Komentarze
-      - Funkcja input()
+      - Funkcja `input()`
     Struktury danych:
       - list
       - tuple
