--- a/config.yml
+++ b/config.yml
@@ -17,7 +17,7 @@ Python:
       - Komentarze
       - Funkcja `input()`
     Struktury danych:
-      - `list`
+      - \`list\`
       - `tuple`
       - `dict`
       - `set`
