Just another update

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 Python:
   Opis:
-    Szkolenie obejmuje naukę podstaw programowania dla osób zupełnie początkujących i porusza wszystkie najważniejsze zagadnienia potrzebne do startu jako Python developer.
+    Szkolenie obejmuje naukę podstaw programowania dla osób zupełnie początkujących jak również wszystkie najważniejsze zagadnienia potrzebne na start dla Python developera
   Lekcje:
     Wprowadzenie:
       - Informacje o języku
@@ -87,7 +87,7 @@ Python:
       - Logowanie
 Data Science:
   Opis:
-    To szkolenie obejmuje najważniejsze biblioteki potrzebne do pracy jako data scientist. Jest punktem wyjścia do dalszej nauki pracy z danymi a także uczenia maszynowego i głębokiego.
+    To szkolenie wprowadza w świat analizy danych i daje fundament do dalszej nauki w kierunku data scientista / machine learning engineera 
   Lekcje:
     Wprowadzenie:
       - Informacje ogólne
