Just another update

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-Python:
+Python od podstaw:
   Opis:
     Szkolenie obejmuje naukę podstaw programowania dla osób zupełnie początkujących jak również wszystkie najważniejsze zagadnienia potrzebne na start dla Python developera
   Lekcje:
@@ -85,9 +85,9 @@ Python:
       - Generatory
       - Doctesty
       - Logowanie
-Data Science:
+Analiza danych:
   Opis:
-    To szkolenie wprowadza w świat analizy danych i daje fundament do dalszej nauki w kierunku data scientista / machine learning engineera 
+    To szkolenie wprowadza w świat analizy danych i daje fundament do dalszego rozwoju w kierunku data science i uczenia maszynowego
   Lekcje:
     Wprowadzenie:
       - Informacje ogólne
