Just another update

--- a/config.yml
+++ b/config.yml
@@ -85,7 +85,7 @@ Python od podstaw:
       - Generatory
       - Doctesty
       - Logowanie
-Analiza danych:
+Analiza danych|todo:
   Opis:
     To szkolenie wprowadza w świat analizy danych i daje fundament do dalszego rozwoju w kierunku data science i uczenia maszynowego
   Lekcje:
