Just another update

--- a/config.json
+++ b/config.json
@@ -1,185 +1,4 @@
 {
-    "Python od podstaw": {
-        "Opis": "Szkolenie obejmuje naukę podstaw programowania dla osób zupełnie początkujących jak również wszystkie najważniejsze zagadnienia potrzebne na start dla Python developera",
-        "Lekcje": {
-            "Wprowadzenie": [
-                "Informacje o języku",
-                "Instalacja środowiska",
-                "PyCharm - utworzenie projektu",
-                "PyCharm - elementy IDE",
-                "Jupyter Notebook"
-            ],
-            "Podstawy": [
-                "Definiowanie zmiennych",
-                "Funkcje wbudowane",
-                "Typy",
-                "Operacje arytmetyczne",
-                "Operacje na stringach",
-                "Komentarze",
-                "Funkcja input()"
-            ],
-            "Struktury danych": [
-                "list",
-                "tuple",
-                "dict",
-                "set",
-                "Operacje na strukturach danych",
-                "Slicing",
-                "Zagnieżdżone struktury",
-                "Wbudowane generatory cz. 1",
-                "Mutowalność, hashowalność i kopiowanie obiektów"
-            ],
-            "Instrukcje warunkowe": [
-                "Operatory porównania",
-                "Spójniki logiczne",
-                "Instrukcja if",
-                "Instrukcja if-else",
-                "Instrukcja if-elif-(else)"
-            ],
-            "Pętle": [
-                "Pętla for",
-                "Pętla while",
-                "Instrukcje break oraz continue",
-                "Zagnieżdżone pętle",
-                "Generatory w pętli for",
-                "list comprehension"
-            ],
-            "Funkcje": [
-                "Procedura",
-                "Argumenty funkcji",
-                "Słowo kluczowe return",
-                "Argumenty z wartością domyślną",
-                "Kolejność argumentów",
-                "Wbudowane generatory cz. 2",
-                "lambda",
-                "argument unpacking",
-                "args, kwargs",
-                "Docstring"
-            ],
-            "Obsługa błędów i jakość kodu": [
-                "PEP 8",
-                "Type annotations",
-                "Stack Overflow",
-                "Debugowanie",
-                "Wyjątki"
-            ],
-            "Moduły": [
-                "Ogólne informacje",
-                "Przykładowe moduły biblioteki standardowej",
-                "Import kodu z innych plików",
-                "Tworzenie własnego modułu"
-            ],
-            "Praca z plikami": [
-                "Pliki txt",
-                "Pliki json",
-                "pickle",
-                "Biblioteka os"
-            ],
-            "Programowanie obiektowe": [
-                "Klasa oraz obiekt",
-                "Definicja klasy, konstruktor",
-                "Atrybuty i metody",
-                "staticmethod, classmethod",
-                "Dziedziczenie",
-                "Stringifikacja"
-            ],
-            "Wyrażenia regularne": [
-                "r-string",
-                "Proste patterny",
-                "Escape character",
-                "Znaki specjalne",
-                "Złożone patterny",
-                "Funkcje biblioteki re"
-            ],
-            "Pozostałe zagadnienia": [
-                "Rekurencja",
-                "Generatory",
-                "Doctesty",
-                "Logowanie"
-            ]
-        }
-    },
-    "Analiza danych|todo": {
-        "Opis": "To szkolenie wprowadza w świat analizy danych i daje fundament do dalszego rozwoju w kierunku data science i uczenia maszynowego",
-        "Lekcje": {
-            "Wprowadzenie": [
-                "Informacje ogólne",
-                "Jupyter Notebook"
-            ],
-            "Numpy - tablice": [
-                "Wektory i macierze",
-                "Zapis i odczyt tablic z pliku",
-                "Kształt oraz wymiar tablicy",
-                "Typy danych w tablicach",
-                "Rozmiar tablicy",
-                "Slicing",
-                "Slicing z użyciem warunków logicznych",
-                "Zmiana kształtu tablicy",
-                "Sortowanie"
-            ],
-            "Numpy - operacje matematyczne": [
-                "Podstawowe operacje matematyczne",
-                "Operacje logiczne",
-                "Algebra liniowa",
-                "Funkcje agregujące"
-            ],
-            "Numpy - pozostałe zagadnienia": [
-                "Broadcasting",
-                "Kopiowanie tablic",
-                "Obroty tablic i wyciąganie przekątnej",
-                "Łączenie tablic",
-                "Liczby pseudolosowe"
-            ],
-            "Pandas - series i dataframe": [
-                "Series",
-                "DataFrame"
-            ],
-            "Pandas - operacje odczytu": [
-                "Struktura dataframe'a",
-                "Wyciąganie kolumn, wierszy, wartości",
-                "Wartości unikalne",
-                "Filtrowanie dataframe'a",
-                "Wykresy"
-            ],
-            "Pandas - operacje zapisu": [
-                "Modyfikacja istniejących wartości",
-                "Sortowanie",
-                "Tworzenie nowych kolumn",
-                "Operacje na kolumnach",
-                "Dodawanie wierszy"
-            ],
-            "Pandas - pozostałe operacje": [
-                "Grupowanie i agregacja",
-                "Łączenie tabel",
-                "Wczytywanie dużych zbiorów danych",
-                "Indeks hierarchiczny",
-                "Data i czas",
-                "Wybrane pozostałe funkcje"
-            ],
-            "Matplotlib - typy wykresów": [
-                "Wykres punktowy",
-                "Wykres liniowy",
-                "Wykres słupkowy",
-                "Histogram",
-                "Heatmapa"
-            ],
-            "Matplotlib - stylowanie wykresów": [
-                "Kolory i kształty",
-                "Opisy osi oraz tytuł wykresu",
-                "Ticki",
-                "Legenda i siatka",
-                "Podwykresy",
-                "Zapis do pliku",
-                "Colorbar"
-            ],
-            "Matplotlib - zaawansowane stylowanie wykresów": [
-                "Stylowanie ticków",
-                "Dwie osie pionowe",
-                "Współdzielenie osi"
-            ],
-            "Seaborn": [
-                "Boxplot"
-            ]
-        }
-    }
+    "Python od podstaw": "https://patrykpalej.dev/docs/python-od-podstaw",
+    "Analiza danych": "https://patrykpalej.dev/docs/analiza-danych"
 }
