Just another update

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "Python od podstaw": "https://patrykpalej.dev/docs/szkolenie-python-od-podstaw",
-    "Analiza danych": "https://patrykpalej.dev/docs/szkolenie-analiza-danych"
+    "Analiza danych|todo": "https://patrykpalej.dev/docs/szkolenie-analiza-danych"
 }
