--- a/config.yml
+++ b/config.yml
@@ -155,3 +155,14 @@ Analiza danych|todo:
       - Współdzielenie osi
     Seaborn:
       - Boxplot
+Nowe szkolenie test:
+  Opis:
+    Opis nowego szkolenia
+  Lekcje:
+    Temat pierwszy:
+      - Informacje ogólne
+      - Informacje szczególne
+    Temat drugi:
+      - Informacje ogólne
+      - Informacje szczególne
+  
