Just another update

--- a/config.yml
+++ b/config.yml
@@ -165,7 +165,7 @@ Nowe szkolenie test:
     Temat drugi:
       - Informacje ogólne
       - Informacje szczególne
-Nowe todo szkolenie:
+Nowe todo szkolenie|todo:
   Opis:
     Opis nowego szkolenia
   Lekcje:
