Just another update

--- a/config.json
+++ b/config.json
@@ -1,6 +1,4 @@
 {
     "Python od podstaw": "https://patrykpalej.dev/docs/szkolenie-python-od-podstaw",
-    "Analiza danych|todo": "https://patrykpalej.dev/docs/szkolenie-analiza-danych",
-    "Nowe szkolenie test": "https://patrykpalej.dev/docs/szkolenie-nowe-szkolenie-test",
-    "Nowe todo szkolenie|todo": "https://patrykpalej.dev/docs/szkolenie-nowe-todo-szkolenie"
+    "Analiza danych|todo": "https://patrykpalej.dev/docs/szkolenie-analiza-danych"
 }
