--- a/config.yml
+++ b/config.yml
@@ -56,6 +56,7 @@ Python od podstaw:
       - Type annotations
       - Stack Overflow
       - Debugowanie
+      - Linebreak
       - Wyjątki
     Moduły:
       - Ogólne informacje
