Just another update

--- a/config.yml
+++ b/config.yml
@@ -75,7 +75,7 @@ Python od podstaw:
       - Metody
       - staticmethod, classmethod
       - Dziedziczenie
-      - Stringifikacja
+      - Stringifikacja i reprezentacja
       - class attribute
     Wyrażenia regularne:
       - Wprowadzenie
