--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-    "Python od podstaw": "https://patrykpalej.dev/docs/szkolenie-python-od-podstaw",
+    "Python podstawowy": "https://patrykpalej.dev/docs/szkolenie-python-podstawowy",
+    "Python średniozaawansowany": "https://patrykpalej.dev/docs/szkolenie-python-sredniozaawansowany",
     "Analiza danych|todo": "https://patrykpalej.dev/docs/szkolenie-analiza-danych"
 }
