Just another update

--- a/config.yml
+++ b/config.yml
@@ -84,7 +84,7 @@ Python średnio zaawansowany:
      - Typy danych
      - Zamiana daty na tekst i tekstu na datę
      - Strefy czasowe
-     - Obsługa kalendarza
+     - Dni tygodnia
     Bazy danych:
      - Wstęp do baz danych i podstawy SQL
      - Nawiązanie połączenia
