Just another update

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "Python podstawowy": "https://patrykpalej.dev/docs/szkolenie-python-podstawowy",
-    "Python średnio zaawansowany": "https://patrykpalej.dev/docs/szkolenie-python-srednio-zaawansowany",
+    "Python średnio zaawansowany|todo": "https://patrykpalej.dev/docs/szkolenie-python-srednio-zaawansowany",
     "Analiza danych|todo": "https://patrykpalej.dev/docs/szkolenie-analiza-danych"
 }
