--- a/config.yml
+++ b/config.yml
@@ -76,7 +76,7 @@ Python podstawowy:
       - Pliki json
       - pickle
       - Biblioteka os
-Python średnio zaawansowany:
+Python średnio zaawansowany|todo:
   Opis:
     To szkolenie skupia się na pogłębieniu wiedzy i rozwijaniu umiejętności programowania w Pythonie. Obejmuje m.in. zagadnienia związane z wyrażeniami regularnymi, wykorzystaniem protokołu HTTP czy łączeniem się z bazą danych.
   Lekcje:
